--- a/app/src/Makefile
+++ b/app/src/Makefile
@@ -9,36 +9,36 @@ include $(TOP)/configure/CONFIG
 # Build an ioc application
 # Use PROD_IOC_RTEMS for RTEMS only
 # Use PROD_IOC_Linux for Linux only
-PROD_IOC_Linux = lc20
+PROD_IOC_Linux = setra
 
-# lc20.dbd will be created and installed
-DBD += lc20.dbd
+# setra.dbd will be created and installed
+DBD += setra.dbd
 
-lc20_DBD += base.dbd
-lc20_DBD += iocAdmin.dbd
-lc20_DBD += asSupport.dbd
-lc20_DBD += asyn.dbd
-lc20_DBD += stream.dbd
-lc20_DBD += modbus.dbd
-lc20_DBD += modbusSupport.dbd
-lc20_DBD += caPutLog.dbd
+setra_DBD += base.dbd
+setra_DBD += iocAdmin.dbd
+setra_DBD += asSupport.dbd
+setra_DBD += asyn.dbd
+setra_DBD += stream.dbd
+setra_DBD += modbus.dbd
+setra_DBD += modbusSupport.dbd
+setra_DBD += caPutLog.dbd
 
 # <name>_registerRecordDeviceDriver.cpp will be created from <name>.dbd
-lc20_SRCS += lc20_registerRecordDeviceDriver.cpp
-lc20_SRCS_DEFAULT += lc20Main.cpp
+setra_SRCS += setra_registerRecordDeviceDriver.cpp
+setra_SRCS_DEFAULT += setraMain.cpp
 
 # Add locally compiled object code
-#lc20_SRCS += dbSubExample.c
+#setra_SRCS += dbSubExample.c
 
-lc20_LIBS += stream
-#lc20_LIBS += calc
+setra_LIBS += stream
+#setra_LIBS += calc
 
-lc20_LIBS += autosave
-lc20_LIBS += devIocStats
-lc20_LIBS += modbus
-lc20_LIBS += caPutLog
-lc20_LIBS += asyn
-lc20_LIBS += $(EPICS_BASE_IOC_LIBS)
+setra_LIBS += autosave
+setra_LIBS += devIocStats
+setra_LIBS += modbus
+setra_LIBS += caPutLog
+setra_LIBS += asyn
+setra_LIBS += $(EPICS_BASE_IOC_LIBS)
 
 #===========================
 
