Updated the test IOC .cfg file

--- a/children/ioc-tst-setra-mspace.cfg
+++ b/children/ioc-tst-setra-mspace.cfg
@@ -1,6 +1,6 @@
 RELEASE=$$UP(PATH)
-ENGINEER="Jane Liu (janeliu-slac)"
-LOCATION="TST"
+ENGINEER=Jane Liu (janeliu-slac)
+LOCATION=TST
 IOC_PV=TST:IOC:GIGE:01
 ARCH=rhel9-x86_64
 
